# github_actions_test

./: main.py  pyproject.toml  tox.ini
.github/workflows/: auto-tag.yml  build-on-tag.yml  test.yaml
github_actions_test/: __init__.py
tests/: test_arith.py  test_python_version.py
utils/: __init__.py  arith.py
