[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "github-actions-test"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.hatch.version]
source = "uv-dynamic-versioning"

[dependency-groups]
dev = ["mypy>=1.17.1", "pytest>=8.4.1", "ruff>=0.12.11", "tox>=4.29.0"]
